V3_ws/log/build_2023-05-18_18-51-26/BasestationV3/stderr.log
  File "/home/coreblimp1/GitHub/Basestation/V3_ws/install/BasestationV3/lib/python3.8/site-packages/BasestationV3/Input.py", line 1
    import .Text
           ^
SyntaxError: invalid syntax

